# Qt6_Qml_Module_Test

./: CMakeLists.txt
Resources/: main.qrc
Src/: main.cpp
UI/: main.qml
UI/Components/Business/: CMakeLists.txt  FontFamilties.qml  PTWindow.qml
UI/Components/Violet/: CMakeLists.txt  VEWindow.qml
UI/Style/: CMakeLists.txt  DarkGray.qml
